fixed(hopefully) navbar collapse

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -106,7 +106,7 @@ a {
             }
         }
     }
-    @media(min-width:768px) {
+    @media(min-width:990px) {
         padding: 20px 0;
         border-bottom: none;
         letter-spacing: 1px;
